--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "react": "^0.14.3 || ^15.0.0 || ^16.0.0"
   },
   "peerDependencies": {
     "react": "^0.14.3 || ^15.0.0 || ^16.0.0"
